--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,18 @@
   </properties>
 
   <dependencies>
+
+    <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <groupId>io.rest-assured</groupId>
+      <artifactId>rest-assured</artifactId>
+      <version>5.5.0</version>
       <scope>test</scope>
     </dependency>
+
+
+
+
+
   </dependencies>
 </project>
