--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,15 @@
       <artifactId>rest-assured</artifactId>
       <version>5.5.0</version>
       <scope>test</scope>
+
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>7.10.2</version>
+      <scope>test</scope>
     </dependency>
 
 
