--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
       <version>2.29.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.26.3</version>
+      <scope>test</scope>
+    </dependency>
+
 
 
 
